Removed redundancy with shader binding.

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,4 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/Assignment01/res/models/ezio-auditore-figurine/tex_u1_v1_diffuse.jpg
